jss-compiler/tests/semantic_errors/missing_return.jss
function int func() {
    let int x = 5;
}
function void main() {}
